<resources>
    <string name="app_name">Visualizacao</string>
    <string name="tamanho_fonte">Tamanho da fonte</string>
    <string-array name="categoria_tamanho_fonte">
	    <item>10</item>
	    <item>20</item>
	    <item>30</item>
	    <item>40</item>
	    <item>50</item>
	</string-array>
	<string name="cor_fonte">Cor da fonte</string>
    <string-array name="categoria_cor_fonte">
	    <item>preto</item>
	    <item>verde</item>
	    <item>azul</item>
	    <item>vermelho</item>
	    <item>branco</item>
	</string-array>
	<string name="cor_fundo">Cor do fundo</string>
    <string-array name="categoria_cor_fundo">
	    <item>vermelho</item>
	    <item>verde</item>
	    <item>azul</item>
	    <item>preto</item>
	    <item>branco</item>
	</string-array>
	<string name="cor_fonte_destacado">Cor da fonte de destacado</string>
	<string-array name="categoria_cor_fonte_destacado">
	    <item>amarelo</item>
	    <item>azul marinho</item>
	    <item>violeta</item>
	    <item>cinzento</item>
	</string-array>
	<string name="cor_fundo_destacado">Cor do fundo de destacado</string>
	<string-array name="categoria_cor_fundo_destacado">
	    <item>violeta</item>
	    <item>amarelo</item>
	    <item>azul marinho</item>
	    <item>cinzento</item>
	</string-array>
	<string name="exemplo">Exemplo</string>
	<string name="exemplo_texto">Exemplo de texto. Exemplo de texto destacado.</string>
</resources>
